--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^8.1.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/pdfmake": "^0.2.11",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "pdfmake": "^0.2.18",
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
