--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.15",
     "@nestjs/swagger": "^8.1.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^10.4.15",
     "@types/pdfmake": "^0.2.11",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
